# corridor-intelligence-platform-agents

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Jenkinsfile  PLAN.MD  README.md  docker-compose.yml  entrypoint.sh  entrypoint_sync.py  fly.toml  langgraph.json  pyproject.toml  run_all.py
docs/: AGENT_ACCURACY.md
notebook/: agent.ipynb
scripts/: build_manifest.py  import_corridor_data.py  smoke_test.sh
src/adapters/: pipeline_bridge.py
src/agents/economic_impact_modeling_agent/: README.md  agent.py
src/agents/financing_optimization_agent/: README.md  agent.py
src/agents/geospatial_intelligence_agent/: README.md  agent.py
src/agents/grant_writer/: agent.py
src/agents/infrastructure_optimization_agent/: README.md  agent.py
src/agents/opportunity_identification_agent/: README.md  agent.py
src/agents/orchestrator_agent/: agent.py
src/agents/realtime_monitoring_agent/: README.md  agent.py
src/agents/stakeholder_intelligence_agent/: README.md  agent.py
src/api/: __init__.py  cache.py  config.py  main.py  schemas.py  security.py
src/api/features/: __init__.py
src/api/models/: __init__.py  dashboard.py  requests.py  responses.py
src/api/routers/: __init__.py  acled.py  agriculture_enriched.py  chat.py  corridor.py  dashboard.py  energy.py  geospatial.py  health.py  indicators.py  infrastructure.py  infrastructure_enriched.py  macro_enriched.py  manufacturing.py  policy.py  projects_enriched.py  stakeholders_registry.py  tourism.py  trade.py
src/api/services/: __init__.py  acled_live.py  acled_service.py  agent_bridge.py  agriculture_enriched_service.py  chat_service.py  connectivity_service.py  conversation_store.py  dashboard_service.py  energy_service.py  gee_service.py  geospatial_service.py  infrastructure_enriched_service.py  livestock_service.py  llm_service.py  macro_enriched_service.py  manufacturing_service.py  mineral_service.py  osm_service.py  policy_service.py  projects_enriched_service.py  stakeholders_registry_service.py  tourism_service.py  trade_service.py  worldbank_service.py
src/catalog/: __init__.py  catalog.py  report.py  validator.py
src/pipelines/: __init__.py
src/pipelines/acled_pipeline/: __init__.py  fetcher.py  pipeline.py
src/pipelines/aiddata_pipeline/: fetcher.py
src/pipelines/climate_pipeline/: __init__.py  config.py  fetchers.py
src/pipelines/connectivity_pipeline/: __init__.py  downloader.py  pipeline.py  (+1 more)
src/scheduler/: jobs.py  scheduler.py
tests/: __init__.py  conftest.py  test_agent_tools.py  test_agents.py  test_all.py  test_conversation.py  test_e2e.py  test_frontend_compat.py  test_integration.py  test_live.py  test_llm.py  test_opportunities.py  test_pipeline_bridge.py  test_route_optimization.py
workspaces/abidjan-lagos/: PROJECT.md  thread.json
(+436 files in other folders)
