[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "langchain>=1.0.0",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.0",
    "langgraph-api>=0.4.46",
    "langgraph-cli[inmem]>=0.4.2",
    "email-validator>=2.2.0",
    "tavily-python>=0.7.12",
    "langchain-google-genai>=4.2.0",
    "google-genai>=1.59.0",
    "fastapi[standard]>=0.128.0",
    "pypdf>=6.6.1",
]
