[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corridor-intelligence-platform"
version = "0.2.0"
description = "Lagos-Abidjan Corridor Intelligence Platform — Data Pipelines, AI Agents & API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # ── Geospatial / Pipeline ────────────────────────────────────────────
    "earthengine-api>=1.4.0",
    "geopandas>=1.0.0",
    "fiona>=1.10.0",
    "shapely>=2.0.0",
    "networkx>=3.4",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    # ── API Server ───────────────────────────────────────────────────────
    "fastapi[standard]>=0.128.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    # ── Scheduler ───────────────────────────────────────────────────────
    "apscheduler>=3.10,<4",
    # ── CLI & DX ─────────────────────────────────────────────────────────
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-json-logger>=3.0",
    # ── LangChain / Agents ───────────────────────────────────────────────
    "langchain>=1.0.0",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "langchain-google-genai>=2.1.0",
    "langchain-tavily>=0.2.12",
    "tavily-python>=0.7.12",
    "langgraph>=1.0.0",
    "langgraph-api>=0.4.46",
    "langgraph-cli[inmem]>=0.4.2",
    "email-validator>=2.2.0",
    "pypdf>=6.6.1",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.3.2",
    # ── Workspace (agents) ───────────────────────────────────────────────
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
livestock = ["rasterio>=1.4.0"]
connectivity = ["pyarrow>=18.0.0"]
all = ["rasterio>=1.4.0", "pyarrow>=18.0.0"]
dev = ["pytest>=8.0.0", "ipykernel>=6.30.1"]

[project.scripts]
corridor = "run_all:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.3",
]
